martor preview fixed
Website index title

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Blog Index</title>
+    <title>Benjamin Palko | Software Engineer</title>
 </head>
 <body>
 {% include 'navbar.html' %}
