--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="{% url 'Blog:index' %}">Blog</a>
                 </li>
                 <li>
-                    <a class="navbar-brand mx-auto" href="{% url 'index' %}">Benjamin <b>Palko</b></a>
+                    <a class="navbar-brand mx-auto" href="{% url 'index' %}">Benjamin Palko | Software Engineer</a>
                 </li>
                 <li class="nav-item navbar-right">
                     <!--<a class="nav-link" href="{% url 'admin:index' %}">Admin</a>-->
