Templates and Static
- Blog template updates
- Static folder definition and setup
- about page

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Benjamin Palko | Software Engineer{%  endblock %}</title>
+{% block dependencies %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -13,28 +17,14 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b09b80552f.js" crossorigin="anonymous"></script>
+{% endblock %}
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light" data-toggle="affix">
-    <div class="container flex-sm-nowrap justify-content-center">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars4"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse text-center" id="navbars4">
-            <ul class="navbar-nav nav-fill w-100">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'Blog:index' %}">Blog</a>
-                </li>
-                <li>
-                    <a class="navbar-brand mx-auto" href="{% url 'index' %}">Benjamin Palko | Software Engineer</a>
-                </li>
-                <li class="nav-item navbar-right">
-                    <!--<a class="nav-link" href="{% url 'admin:index' %}">Admin</a>-->
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+{% block navigation %}
+    {% include 'util/navbar.html' %}
+    {% include 'util/socialbar.html' %}
+{% endblock %}
+{% block content %}
+{% endblock %}
 </body>
 </html>
