--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Blog Index</title>
-</head>
-<body>
-{% include 'navbar.html' %}
-
-<div class="container">
-</div>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+    <div class="container mt-4 bg-light">
+        <h1 class="text-center">About</h1>
+        <div class="row">
+            <div class="col-4">
+                <p>Stuff about me</p>
+                <br>
+                <p>Stuff about me</p>
+                <br>
+                <p>Stuff about me</p>
+                <br>
+                <p>Stuff about me</p>
+                <br>
+                <p>Stuff about me</p>
+                <br>
+            </div>
+            <div class="col-2">
+                <img class="img-thumbnail rounded float-right" src="{% static 'images/portrait.jpg' %}" alt="Portrait">
+            </div>
+        </div>
+    </div>
+{% endblock %}
