--- a/templates/util/socialbar.html
+++ b/templates/util/socialbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static "social-share.css" %}" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static "css/social-share.css" %}" crossorigin="anonymous">
 <div class="icon-bar">
         <a id="twitter" href="https://twitter.com/benjaminpalko" target="_blank"><i class="fab fa-twitter"></i></a>
         <a id="linkedin" href="https://www.linkedin.com/in/benjaminpalko/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
