--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -8,9 +8,8 @@
             background-size: cover;
             -o-background-size: cover;
             ">
-    <div class="container pt-5">
+    <div class="shadow-lg container mt-4 p-5 rounded-lg border border-dark">
         {% if blog_post_list %}
-
 
             {% for post in blog_post_list %}
                 {% if forloop.counter|divisibleby:2 is False %}
