--- a/templates/util/navbar.html
+++ b/templates/util/navbar.html
@@ -4,7 +4,7 @@
     <title>Navbar</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light" data-toggle="affix">
+<nav class="shadow navbar navbar-expand-sm navbar-dark bg-dark" data-toggle="affix">
     <div class="container flex-sm-nowrap justify-content-center">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars4"
                 aria-expanded="false" aria-label="Toggle navigation">
