--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block content %}
-    <link rel="stylesheet" href="{% static 'css/social-share.css' %}"
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
     <body style="
             background: url('{% static 'images/work.jpg' %}') no-repeat center center fixed;
             -webkit-background-size: cover;
@@ -10,14 +10,31 @@
             background-size: cover;
             -o-background-size: cover;
             ">
-    <div class="shadow-lg container mt-4 p-5 rounded-lg border border-dark">
+    <div class="container mt-5 p-5 rounded-lg shadow-lg">
 
         <div class="row">
-            <div class="col-4">
-                <img class="img-thumbnail rounded bg-dark border border-dark" src="{% static 'images/portrait.jpg' %}" alt="Portrait">
+            <div class="col-12 col-md-4">
+                <img class="img-thumbnail rounded bg-dark border border-dark"
+                     src="{% static 'images/portrait.jpg' %}"
+                     alt="Portrait">
             </div>
-            <div class="col-8">
-                <!--    PLACEHOLDER -->
+            <div class="col-12 col-md-8 shadow bg-transparent rounded">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non suscipit erat, et ultricies
+                    libero. Proin ac magna eu est tempus pulvinar. Morbi lobortis lobortis ligula, a ultricies purus.
+                    Integer sodales elit vel sem pharetra ultrices. Nunc lacinia commodo faucibus. Maecenas et imperdiet
+                    purus. Praesent maximus viverra felis sit amet ultrices.
+                </p>
+                <p>
+
+                    Proin pretium aliquet ligula, id rutrum urna consectetur placerat. Nam ac placerat odio. Suspendisse
+                    convallis quis augue ut iaculis. Curabitur tempor leo vel turpis sodales, eu tristique purus cursus.
+                    Nulla eu venenatis nibh, in pellentesque urna. Cras mollis neque iaculis tortor finibus, id gravida
+                    est efficitur. Pellentesque ut quam et lorem volutpat elementum et eget ante. Donec laoreet nibh
+                    cursus, tincidunt nisl quis, convallis metus. Donec euismod tristique odio, vitae tincidunt nunc
+                    iaculis nec. In hac habitasse platea dictumst. Proin sapien massa, tincidunt sed molestie eu,
+                    ultricies at felis. Aenean sagittis rutrum lorem. Aenean consectetur est ut ante bibendum sagittis.
+                </p>
             </div>
         </div>
     </div>
