--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block links %}
+    <link rel="stylesheet" href="{% static 'css/home.css' %}" />
+{%  endblock %}
+
 {% block content %}
-    <body style="
-            background: url('{% static 'images/hello.jpg' %}') no-repeat center center fixed;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            background-size: cover;
-            -o-background-size: cover;
-            ">
+    <body>
     </body>
 {% endblock %}
