--- a/templates/blog/blogpost_card.html
+++ b/templates/blog/blogpost_card.html
@@ -1,3 +1,6 @@
+<a class="list-group-item list-group-item-action"
+   href="/blog/{{ post.id }}/{{ post.text_title }}/">{{ post.text_title }}</a>
+
 <div class="card flex-md-row mb-4 shadow-sm h-md-250">
     <div class="card-body d-flex flex-column align-items-start">
         {% if post.text_category == post.DESIGN %}
