--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block links %}
+{% block links %}{{ block.super }}
     <link rel="stylesheet" href="{% static 'css/home.css' %}" />
 {%  endblock %}
 
