--- a/templates/static/css/base.css
+++ b/templates/static/css/base.css
@@ -1,6 +1,3 @@
-/*  Font    */
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
-body {
-    font-family: Roboto, monospace !important;
+.bg-opaque {
+    background-color: rgba(255, 255, 255, 0.35);
 }
