Changing blog page look

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 
     <body>
-    <div class="shadow-lg container mt-4 p-5">
+    <div class="shadow-lg container mt-4 p-5 bg-opaque rounded-lg">
         {% if blog_post_list %}
             <ul class="list-group">
                 {% for post in blog_post_list %}
