Converting to (mostly) SPA

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,15 +29,11 @@
                 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
                 crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" href="{% static 'css/base.css' %}"/>
-
     {% endblock %}
 
 </head>
 
-{% include 'util/navbar.html' %}
-{% include 'util/socialbar.html' %}
-
+<body>
 {% block content %}
 {% endblock %}
 
