--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,124 @@
 {% load static %}
 
 {% block links %}{{ block.super }}
-    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
-{%  endblock %}
+    <link rel="stylesheet" href="{% static 'css/index.css' %}"/>
+{% endblock %}
 
 {% block content %}
-    <div class="supertemp">
-        <div class="container-fluid vh-100">
-            <img class="img-fluid" src="{% static 'images/hello.jpg' %}"  alt="Hello"/>
+    <div class="bg-dark text-light">
+
+        <div class="d-flex flex-column">
+
+            {# Title #}
+            <div class="container-fluid vh-100 bg-light text-dark d-flex align-content-center">
+
+                <div class="align-self-center">
+                    <h1 class="display-1">Benjamin Palko</h1>
+                    <h4 class="display-4">Software Engineer</h4>
+                </div>
+                <div class="align-self-end display-4">
+                    <a class="about text-dark" href="#about">About</a>
+                    /
+                    <a class="blog text-dark" href="#blog">Blog</a>
+                    /
+                    <a class="contact text-dark" href="#contact">Contact</a>
+                </div>
+
+            </div>
+
+            {# About #}
+            <div class="container-fluid vh-100" id="about">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="display-1 text-center">About</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <h1 class="display-1 text-center typed-hello">Placeholder</h1>
+                    </div>
+                    <div class="col-6">
+                        <h1 class="display-1 text-center typed-hello">Placeholder</h1>
+                    </div>
+                </div>
+            </div>
+
+            {# Blog #}
+            <div class="container-fluid vh-100 bg-light text-dark" id="blog">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="display-1 text-center">Blog</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+
+                        <div class="shadow-lg container mt-4 p-5 bg-opaque rounded-lg">
+                            {% if blog_post_list %}
+                                <ul class="list-group">
+                                    {% for post in blog_post_list %}
+                                        <li class="list-group-item bg-transparent border border-0">
+                                            {% include 'blog/blogpost_card.html' with post=post %}
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            {% else %}
+                                <h1 class="text-center">Nothing to see here, move along!</h1>
+                            {% endif %}
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            {# Contact #}
+            <div class="container-fluid vh-100" id="contact">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="display-1 text-center">Contact</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <h1 class="display-1 text-center typed-hello">Placeholder</h1>
+                    </div>
+                    <div class="col-6">
+                        <h1 class="display-1 text-center typed-hello">Placeholder</h1>
+                    </div>
+                </div>
+            </div>
         </div>
-    <div class="container-fluid vh-100">
 
     </div>
-    </div>
+
+
+{% endblock %}
+
+{% block scripts %}
+    <script>
+        $(document).ready(function () {
+            // Add smooth scrolling to all links
+            $("a").on('click', function (event) {
+
+                // Make sure this.hash has a value before overriding default behavior
+                if (this.hash !== "") {
+                    // Prevent default anchor click behavior
+                    event.preventDefault();
+
+                    // Store hash
+                    var hash = this.hash;
+
+                    // Using jQuery's animate() method to add smooth page scroll
+                    // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+                    $('html, body').animate({
+                        scrollTop: $(hash).offset().top
+                    }, 800, function () {
+
+                        // Add hash (#) to URL when done scrolling (default click behavior)
+                        window.location.hash = hash;
+                    });
+                } // End if
+            });
+        });
+    </script>
 {% endblock %}
