Finishing up index page formatting

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,11 @@
         <script src="https://kit.fontawesome.com/18dea9f2a9.js" crossorigin="anonymous"></script>
 
         <!-- Bootstrap 4 -->
-        <link rel="stylesheet" href="{%  static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{%  static 'css/bootstrap.min.css' %}" />
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/popper.min.js' %}"></script>
 
+        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock %}
 
 </head>
