--- a/templates/index.html
+++ b/templates/index.html
@@ -6,165 +6,205 @@
 {% endblock %}
 
 {% block content %}
-    <div>
 
-        <div class="bg-dark text-light">
-
-            {# Title #}
-            <div class="container-fluid vh-100 bg-light text-dark d-flex flex-column align-items-center">
+    <div class="bg-dark text-light">
 
 
-                <div class="h-50 text-center mt-auto">
-                    <h1 class="display-1">Benjamin Palko</h1>
-                    <h4 class="display-4">Software Engineer</h4>
-                </div>
-                <div class="display-4  text-center pb-3">
-                    <a class="about text-dark" href="#about">About</a>
-                    /
-                    <a class="blog text-dark" href="#blog">Blog</a>
-                    /
-                    <a class="contact text-dark" href="#contact">Contact</a>
-                </div>
+        {# Title #}
+        <div class="container-fluid vh-100 bg-light text-dark d-flex flex-column align-items-center">
 
+
+            <div class="h-50 text-center mt-auto">
+                <h1 class="display-1">Benjamin Palko</h1>
+                <h4 class="display-4">Software Engineer</h4>
+            </div>
+            <div class="display-4  text-center pb-3">
+                <a class="about text-dark" href="#about">About</a>
+                /
+                <a class="blog text-dark" href="#blog">Blog</a>
+                /
+                <a class="contact text-dark" href="#contact">Contact</a>
             </div>
 
-            {# About #}
-            <div class="container vh-100" id="about">
-                <div class="container dynamic-text text-center px-5 my-3">
-                    <h1 class="display-2 text-center border-bottom mb-2">About</h1>
-                    <p>
-                        I'm a Software Engineering graduate from Carleton University living in Brockville,
-                        ON.
-                    </p>
-                    <p>
-                        I am currently working as a Junior Developer, spending the majority of my time with
-                        Java EE application servers. I work mainly Wildfly and Oracle databases for mapping
-                        logic of insurance data.
-                    </p>
-                    <p>
-                        I am expanding my skills to front-end web development with the Python on my own time,
-                        learning the Django frame-work to build my personal website.
-                    </p>
-                </div>
-                <h1 class="text-center display-3 my-5">Skills</h1>
-                <div class="row">
+        </div>
 
-                    <div class="col-3 text-center">
-                        <i class="fab fa-python fa-5x"></i>
-                        <br>
-                        <h3>Python</h3>
-                        <p>Django | Mosquitto | Flask</p>
-                    </div>
-                    <div class="col-3 text-center">
-                        <i class="fab fa-java fa-5x"></i>
-                        <br>
-                        <h3>Java</h3>
-                        <p>Hibernate | Persistence | Mockito<br>Maven | JUnit | Spring</p>
-                    </div>
-                    <div class="col-3 text-center">
-                        <i class="fas fa-database fa-5x"></i>
-                        <br>
-                        <h3>SQL</h3>
-                        <p>MySQL | PostgreSQL | Oracle<br>RDBMS | DOD</p>
-                    </div>
-                    <div class="col-3 text-center">
-                        <i class="fab fa-git-alt fa-5x"></i>
-                        <br>
-                        <h3>Git</h3>
-                        <p>github | gitlab | git bash</p>
-                    </div>
+
+        {# About #}
+        <div class="container min-vh-100" id="about">
+
+            <div class="container dynamic-text text-center px-5 my-3">
+                <h1 class="display-2 text-center border-bottom mb-2">About</h1>
+                <p>
+                    I'm a Software Engineering graduate from Carleton University living in Brockville,
+                    ON.
+                </p>
+                <p>
+                    I am currently working as a Junior Developer, spending the majority of my time with
+                    Java EE application servers. I work mainly Wildfly and Oracle databases for mapping
+                    logic of insurance data.
+                </p>
+                <p>
+                    I am expanding my skills to front-end web development with the Python on my own time,
+                    learning the Django frame-work to build my personal website.
+                </p>
+            </div>
+
+            <h1 class="text-center display-3 my-5">Skills</h1>
+            <div class="row">
+
+                <div class="col-3 text-center">
+                    <i class="fab fa-python fa-5x"></i>
+                    <br>
+                    <h3>Python</h3>
+                    <p>Django | Mosquitto | Flask</p>
                 </div>
-                <div class="row my-5">
-                    <div class="col-4 text-center">
-                        <h5>Web Development</h5>
-                        <i class="fab fa-bootstrap fa-2x mx-1"></i>
-                        <i class="fab fa-html5 fa-2x mx-1"></i>
-                        <i class="fab fa-aws fa-2x mx-1"></i>
-                        <i class="fab fa-heroku fa-2x mx-1"></i>
-                    </div>
-                    <div class="col-4 text-center">
-                        <h5>Misc</h5>
-                        <i class="fab fa-unity fa-2x mx-2"></i>
-                        <i class="fab fa-docker fa-2x mx-2"></i>
-                    </div>
-                    <div class="col-4 text-center">
-                        <h5>Operating Systems</h5>
-                        <i class="fab fa-windows fa-2x mx-1"></i>
-                        <i class="fab fa-ubuntu fa-2x mx-1"></i>
-                        <i class="fab fa-fedora fa-2x mx-1"></i>
-                        <i class="fab fa-raspberry-pi fa-2x mx-1"></i>
-                    </div>
+                <div class="col-3 text-center">
+                    <i class="fab fa-java fa-5x"></i>
+                    <br>
+                    <h3>Java</h3>
+                    <p>Hibernate | Persistence | Mockito<br>Maven | JUnit | Spring</p>
                 </div>
-                <div class="container text-center dynamic-text">
-                    <p>Bash | Restful API | CI/CD (Travis) | Subversion | C#</p>
+                <div class="col-3 text-center">
+                    <i class="fas fa-database fa-5x"></i>
+                    <br>
+                    <h3>SQL</h3>
+                    <p>MySQL | PostgreSQL | Oracle<br>RDBMS | DOD</p>
+                </div>
+                <div class="col-3 text-center">
+                    <i class="fab fa-git-alt fa-5x"></i>
+                    <br>
+                    <h3>Git</h3>
+                    <p>github | gitlab | git bash</p>
                 </div>
             </div>
 
-            {# Blog #}
-            <div class="container-fluid vh-100 bg-light text-dark" id="blog">
-                <div class="row">
-                    <div class="col">
-                        <h1 class="display-1 text-center">Blog</h1>
-                    </div>
+            <div class="row my-5">
+                <div class="col-4 text-center">
+                    <h5>Web Development</h5>
+                    <i class="fab fa-bootstrap fa-2x mx-1"></i>
+                    <i class="fab fa-html5 fa-2x mx-1"></i>
+                    <i class="fab fa-aws fa-2x mx-1"></i>
+                    <i class="fab fa-heroku fa-2x mx-1"></i>
                 </div>
-                <div class="row">
-                    <div class="col">
-
-                        <div class="shadow-lg container mt-4 p-5 bg-opaque rounded-lg">
-                            {% if blog_post_list %}
-                                <ul class="list-group">
-                                    {% for post in blog_post_list %}
-                                        <li class="list-group-item bg-transparent border border-0">
-                                            {% include 'blog/blogpost_card.html' with post=post %}
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            {% else %}
-                                <h1 class="text-center">Nothing to see yet!</h1>
-                            {% endif %}
-                        </div>
-
-                    </div>
+                <div class="col-4 text-center">
+                    <h5>Misc</h5>
+                    <i class="fab fa-unity fa-2x mx-2"></i>
+                    <i class="fab fa-docker fa-2x mx-2"></i>
+                </div>
+                <div class="col-4 text-center">
+                    <h5>Operating Systems</h5>
+                    <i class="fab fa-windows fa-2x mx-1"></i>
+                    <i class="fab fa-ubuntu fa-2x mx-1"></i>
+                    <i class="fab fa-fedora fa-2x mx-1"></i>
+                    <i class="fab fa-raspberry-pi fa-2x mx-1"></i>
                 </div>
             </div>
 
-            {# Contact #}
-            <div class="container-fluid vh-100" id="contact">
-                <h1 class="display-1 text-center">Contact</h1>
-                <div class="h-75">
-                    <div class="row">
-                        <div class="col-4-lg mx-auto">
-                            <div class="display-1">HEY</div>
-                        </div>
-                        <div class="col-8-lg mx-auto">
-                            <div class="d-flex flex-row align-items-center">
-                                <a href="https://codepen.io/benjaminpalko"><i class="fab fa-codepen fa-2x"></i></a>
-                                <a href="https://github.com/BenjaminPalko"><i class="fab fa-github fa-2x"></i></a>
-                                <a href="https://www.linkedin.com/in/benjaminpalko/"><i
-                                        class="fab fa-linkedin fa-2x"></i></a>
-                            </div>
+            <div class="container text-center dynamic-text">
+                <p>Bash | Restful API | CI/CD (Travis) | Subversion | C#</p>
+            </div>
 
-                            <div class="d-flex flex-row">
-                                <a class="btn btn-outline-primary" href="mailto:benjaminpalko@hotmail.com">benjaminpalko@hotmail.com
-                                    <i class="fas fa-paper-plane"></i></a>
-                            </div>
+        </div>
 
-                        </div>
-                    </div>
+
+        {# Blog #}
+        <div class="container-fluid vh-100 bg-light text-dark" id="blog">
+            <div class="row">
+                <div class="col">
+                    <h1 class="display-1 text-center">Blog</h1>
                 </div>
-                <div class="text-center d-flex h-25">
-                    <img class="img-fluid mx-auto bg-dark align-self-end"
-                         src="{% static 'images/built-on-heroku-light.svg' %}" height="150" width="300"
-                         alt="Built on Heroku" type="image/svg"/>
+            </div>
+            <div class="row">
+                <div class="col">
+
+                    <div class="shadow-lg container mt-4 p-5 bg-opaque rounded-lg">
+                        {% if blog_post_list %}
+                            <ul class="list-group">
+                                {% for post in blog_post_list %}
+                                    <li class="list-group-item bg-transparent border border-0">
+                                        {% include 'blog/blogpost_card.html' with post=post %}
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        {% else %}
+                            <h1 class="text-center">Nothing to see yet!</h1>
+                        {% endif %}
+                    </div>
+
                 </div>
             </div>
         </div>
 
-    </div>
 
+        {# Contact #}
+        <div class="container-fluid vh-100" id="contact">
+
+            <div class="h-25">
+                <h1 class="display-3 text-center pt-5">Contact</h1>
+            </div>
+
+            <div class="h-50">
+
+                <div class="row pb-5">
+                    <div class="col d-flex justify-content-center">
+                        <div class="flex-column text-center">
+                            <h3>Benjamin Palko</h3>
+                            <p class="dynamic-text">Software Engineer</p>
+                            <a class="dynamic-text" href="mailto:benjaminpalko@hotmail.com">benjaminpalko@hotmail.com</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row my-5 pt-5">
+                    <div class="col-3"></div>
+                    <div class="col-6 d-flex justify-content-around">
+                        <div class="text-center">
+                            <a class="btn" target="_blank" href="https://codepen.io/benjaminpalko">
+                                <i class="fab fa-codepen fa-3x text-light"></i>
+                                <p class="dynamic-text text-light">Codepen</p>
+                            </a>
+                        </div>
+                        <div class="text-center">
+                            <a class="btn" target="_blank"  href="https://github.com/BenjaminPalko">
+                                <i class="fab fa-github fa-3x text-light"></i>
+                                <p class="dynamic-text text-light">Github</p>
+                            </a>
+                        </div>
+                        <div class="text-center">
+                            <a class="btn" target="_blank"  href="https://discord.gg/h98QHsY">
+                                <i class="fab fa-discord fa-3x text-light"></i>
+                                <p class="dynamic-text text-light">Discord</p>
+                            </a>
+                        </div>
+                        <div class="text-center">
+                            <a class="btn" target="_blank"  href="https://www.linkedin.com/in/benjaminpalko/">
+                                <i class="fab fa-linkedin fa-3x text-light"></i>
+                                <p class="dynamic-text text-light">LinkedIn</p>
+                            </a>
+
+                        </div>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+
+            </div>
+
+            <div class="text-center d-flex h-25">
+                <a class="mx-auto align-self-end" target="_blank" href="https://www.heroku.com/">
+                    <img class="img-fluid bg-dark"
+                     src="{% static 'images/built-on-heroku-light.svg' %}" height="150" width="300"
+                     alt="Built on Heroku" type="image/svg"/>
+                </a>
+            </div>
+
+        </div>
+
+    </div>
 
 {% endblock %}
 
+
+{# Javascript #}
 {% block scripts %}
     <script>
         $(document).ready(function () {
