--- a/templates/blog/blogpost_card.html
+++ b/templates/blog/blogpost_card.html
@@ -1,10 +1,10 @@
 <div class="card flex-md-row mb-4 shadow-sm h-md-250 bg-transparent shadow">
     <div class="card-body d-flex flex-column align-items-start">
         <h1 class="mb-0">
-            <a class="text-dark" href="/blog/{{ post.id }}/{{ post.text_title }}/">{{ post.text_title }}</a>
+            <a class="text-danger" href="/blog/{{ post.id }}/{{ post.text_title }}/">{{ post.text_title }}</a>
         </h1>
 
-        <div class="mb-1 text-dark">{{ post.pub_date }}</div>
+        <div class="mb-1">{{ post.pub_date }}</div>
         <p class="card-text mb-auto mt-2">{{ post.text_desc }}</p>
     </div>
 </div>
